i added catalog and product

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,10 @@ fonts/
 images/
 js/fonts.code-workspace
 slick.css
+jquery.rateyo.min.css
+ion.rangeSlider.js
+jquery.formstyler.min.js
+jquery.rateyo.min.js
+ion.rangeSlider.css
+jquery.formstyler.css
+jquery.formstyler.theme.css
